--- a/docs/assets/nav-submenu.css
+++ b/docs/assets/nav-submenu.css
@@ -1,21 +1,18 @@
 /* Enable nested dropdown menus (Bootstrap 5 doesn't support them by default). */
+/*
+ * Implement nested menus as *inline expanding sections* within the main dropdown,
+ * instead of a right-side flyout. This avoids off-screen/clipping issues and is
+ * easier to use on both desktop and mobile.
+ */
 
 .dropdown-submenu {
-  position: relative;
+  position: static;
 }
 
 .dropdown-submenu > .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-top: -0.125rem;
+  position: static;
+  float: none;
+  margin: 0.25rem 0 0.25rem 1rem;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  padding-left: 0.5rem;
 }
-
-/* Collapsed navbar: render nested menus as indented lists instead of flyouts. */
-@media (max-width: 991.98px) {
-  .dropdown-submenu > .dropdown-menu {
-    left: 0;
-    margin-left: 1rem;
-    margin-top: 0;
-  }
-}
-
